test/test_examples/syntactic_examples/syntax_error/error_statement_18.zig
// Syntax error: missing variable name in variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    const : [] u8 = ifj.write("HELLO");
}